tests/build/cases/ui_node/delegate_list_expr_error_incorrect_type_children.stderr
error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
   --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:1
    |
9   | #[ui_node(children)]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
    |
    = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
